change add listing title

--- a/src/app/listing/new/new.component.html
+++ b/src/app/listing/new/new.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-card class="card">
-    <mat-card-title>New Booking</mat-card-title>
+    <mat-card-title>New Listing</mat-card-title>
     <form class="form" (ngSubmit)="onSubmit($event)" method="post">
       <mat-form-field class="form-group" appearance="fill">
         <mat-label>Listing ID</mat-label>
